# Projet_Spe_2

./: .gitignore  AI_ETHICS_DEPENDENCIES.toml  CAHIER_DES_CHARGES.md  DECOUVERTE_S3.md  GUIDE_TELECHARGEMENT_AWS.md  INSTALLATION_NOTES.md  LICENSE  PLAN_DEVELOPPEMENT.md  QUICKSTART.md  README.md  STRATEGIE_DATASET.md  TEST_UPLOAD.md  UV_QUICKSTART.md  VERIFICATION.md  add_test_evaluation.py  analyze_image_metadata.py  debug_metadata.py  debug_output.txt  fill_evaluation_sections.py  fix_eda_notebook.py  insert_test_section.py  package-lock.json  package.json  patch_notebook.py  pyproject.toml  remove_all_transforms.py  requirements.txt  setup.py  setup_modeling_notebook.py  test-paths.js  test_ntbk.ipynb  update_eda_notebook.py  update_transforms.py
app/: page.tsx
components/: ImageUpload.tsx  ResultsDisplay.tsx
configs/: config.yaml
documentation/: explications_modelisation_CNN.md
notebooks/: 01_EDA.ipynb  02_preprocessing.ipynb  02_stain_normalization.ipynb  03_modeling_patch.ipynb  04_aggregation.ipynb  04_patient_staging.ipynb  05_evaluation.ipynb  06_fairness_transparency.ipynb  EDA.ipynb  EDA_&_Traitement.ipynb  EDA_10000.ipynb  EDA_20000.ipynb  EDA_5000.ipynb  EDA_50000.ipynb  EDA_test.ipynb  Modèle 1 _ modelisation_SimpleCNN_patchs.ipynb  Modèle 2 _ modeling_patch_resnet50.ipynb  Modèle 3 _ vision_transformer.ipynb  Stade.ipynb  fairness_transparency.ipynb  grid_search_simplecnn.ipynb  grid_search_simplecnn_ResNet18.ipynb  modele_Stade.ipynb  modeling_patch_5000.ipynb  modeling_patch_resnet50.ipynb  modelisation_SimpleCNN_patchs.ipynb  newplot4  newplot5  (+6 more)
(+72 files in other folders)
