[project]
name = "projet-spe-2"
version = "0.1.0"
description = "Système de détection automatique de métastases ganglionnaires - CAMELYON17"
authors = [
    {name = "Votre Équipe", email = "votre.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    # Deep Learning
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    
    # Computer Vision
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "scikit-image>=0.21.0",
    "albumentations>=1.3.0",
    
    # Data Science
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    
    # Machine Learning
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.0",
    
    # Visualization
    "plotly>=5.17.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    
    # Interprétabilité
    "grad-cam>=1.4.8",
    
    # Medical Imaging
    "openslide-python>=1.2.0",
    
    # Experiment Tracking
    "tensorboard>=2.13.0",
    
    # Configuration
    "pyyaml>=6.0",
    
    # Utilities
    "tqdm>=4.65.0",
    
    # Jupyter
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.1.0",
    "shap>=0.42.0",  # Interprétabilité avancée (nécessite compilation)
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"

